<resources>
    <string name="app_name">TechSpot</string>
    <string name="add">Add</string>
    <string name="added_quantity">Added Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="item_brand">Item Brand</string>
    <string name="or">OR</string>
    <string name="item_id">Item ID</string>
    <string name="item_category">Item Category</string>
    <string name="colors">Colors:</string>
    <string name="brand_name">Brand Name</string>
    <string name="compatible_devices">Compatible Devices</string>
    <string name="material">Material</string>
    <string name="form_factor">Form Factor</string>
    <string name="screen_size">Screen Size</string>
    <string name="special_features">Special Features</string>
    <string name="charger">Charger</string>
    <string name="cables">Cables</string>
    <string name="battery_capacity">Battery Capacity</string>
    <string name="enter_your_suggestion">Enter your suggestion</string>
    <string name="fell_free_and_write_your_suggestion">Fell free and write your suggestion</string>
    <string name="welcome_to_suggestions">Welcome To Suggestions</string>
    <string name="user_email">User Email</string>
    <string name="user_address">User Address</string>
    <string name="user_phone_number">User Phone Number</string>
    <string name="vivo">Vivo</string>
    <string name="realme">Realme</string>
    <string name="remember_me">Remember Me</string>
    <string name="payment_has_been_successfully_completed">Payment has been successfully completed</string>
    <string name="search">Search</string>
    <string name="acer">Acer</string>
    <string name="dell">Dell</string>
    <string name="apple">Apple</string>
    <string name="hp">HP</string>
    <string name="lenovo">Lenovo</string>
    <string name="msi">MSI</string>
    <string name="asus">Asus</string>
    <string name="other">Other</string>
    <string name="search_here">Search Here</string>
    <string name="filter">Filter</string>
    <string name="maximum_price">Maximum price</string>
    <string name="minimum_price">Minimum price</string>
    <string name="setting">Setting</string>
    <string name="user_profile_name">User Profile Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_us">About Us</string>
    <string name="change_languages">Change Languages</string>
    <string name="night_mode">Night Mode</string>
    <string name="search_here_phone">Search Here</string>
    <string name="your_orders">Your Orders</string>

    <string name="cpu" translatable="false">CPU</string>
    <string name="ram" translatable="false">RAM</string>
    <string name="hdd" translatable="false">HDD</string>
    <string name="ssd" translatable="false">SSD</string>
    <string name="gpu" translatable="false">GPU</string>
    <string name="earbuds" translatable="false">Earbuds</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are You Sure you want to logout?</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="cpu_des">CPU:</string>
    <string name="total_price">Total Price=</string>
    <string name="operating_system">Operating System:</string>
    <string name="back_camera">Back Camera:</string>
    <string name="front_camera">Front Camera:</string>
    <string name="battery">Battery:</string>
    <string name="graphics_processing_unit">Graphics Processing Unit:</string>
    <string name="discount">Discount</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>
    <string name="check_out">Check Out</string>
    <string name="ram_details">RAM:</string>
    <string name="display">Display:</string>
    <string name="memory">Memory:</string>
    <string name="price">Price:</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="iphone">Iphone</string>
    <string name="samsung">Samsung</string>
    <string name="sony">Sony</string>
    <string name="huawei">Huawei</string>
    <string name="xiaomi">Xiaomi</string>
    <string name="honor">Honor</string>
    <string name="oppo">Oppo</string>
    <string name="google">Google</string>
    <string name="monitors">Monitors:</string>
    <string name="cooling">Cooling:</string>
    <string name="power_supply">Power Supply:</string>
    <string name="location">Location</string>
    <string name="phones">Phones</string>
    <string name="laptops">Laptops</string>
    <string name="computers">Computers</string>
    <string name="accessories">Accessories</string>
    <string name="news">News</string>
    <string name="suggestions">Suggestions</string>
    <string name="remember_password_login">Don’t have an account? <font color="#02A1C4">Register Now</font></string>
    <string name="remember_password">Remember Password? <font color="#02A1C4">Login</font></string>
    <string name="agree_and_register">Agree And Register</string>
    <string name="please_enter_your_email">Please Enter Your Email</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login">Login</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="credit_card">Credit Card</string>
    <string name="settings">Settings</string>
    <string name="please_enter_your_password">Please Enter Your Password</string>
    <string name="welcome_back_glad_to_see_you_again">Welcome back! Glad to see you, Again!</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="new_user_join_us_now">New User? Join Us Now!</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="don_t_worry_it_occurs_please_enter_the_email_address_linked_with_your_account">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="home_bottom_menu">Home</string>
    <string name="cart_bottom_menu">Cart</string>
    <string name="location_bottom_menu">Location</string>
    <string name="credit_card_bottom_menu">Credit Card</string>
    <string name="settings_bottom_menu">Settings</string>
    <string name="beats">BEATS</string>
    <string name="ddr4">DDR4</string>
    <string name="nvidia">Nvidia</string>
    <string name="description">Description</string>

    <string name="default_web_client_id" translatable="false">xxxxxxxx</string>


    <!--                                                 -->
    <string-array name="catname">
        <item>Laptops</item>
        <item>Phones</item>
        <item>Computers</item>
        <item>Accessories</item>
    </string-array>

    <string-array name="phonesNumberKey">
        <item>+962</item>
        <item>+967</item>
        <item>+971</item>
        <item>+966</item>
        <item>+974</item>
        <item>+964</item>
        <item>+968</item>
        <item>+970</item>
        <item>+965</item>
    </string-array>


</resources>