<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeIcon"
        android:icon="@drawable/home"
        android:title="@string/home_bottom_menu"/>

    <item
        android:id="@+id/shoppingCartIcon"
        android:icon="@drawable/empty_cart_32"
        android:title="@string/cart_bottom_menu"/>

    <item
        android:id="@+id/locationIcon"
        android:icon="@drawable/placeholder"
        android:title="@string/location_bottom_menu"/>

    <item
        android:id="@+id/creditCardIcon"
        android:icon="@drawable/credit_card_icon"
        android:title="@string/credit_card_bottom_menu"/>

    <item
        android:id="@+id/settingsIcon"
        android:icon="@drawable/settings"
        android:title="@string/settings_bottom_menu"/>

</menu>