<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="45dp"
    tools:context=".SuggestionsActivity.SuggestionsActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_suggestions"
        android:textSize="30sp"
        android:fontFamily="@font/bold"
        android:textColor="@color/design_default_color_error"/>


    <TextView
        android:id="@+id/introText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:fontFamily="@font/boldii"
        android:layout_below="@+id/titleTextView"
        android:text="@string/fell_free_and_write_your_suggestion"/>

    <EditText
        android:id="@+id/suggestionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/introText"
        android:hint="@string/enter_your_suggestion"
        android:inputType="text"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignBottom="@id/suggestionEditText"
        android:layout_alignEnd="@id/suggestionEditText"
        android:layout_marginBottom="13dp"
        android:background="@drawable/send_24" />

</RelativeLayout>