<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccessoriesActivity.AccessoriesActivity">

    <LinearLayout
        android:id="@+id/linearLayoutCheckBoxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/beatsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beats" />

        <CheckBox
            android:id="@+id/jblCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="JBL" />

        <CheckBox
            android:id="@+id/appleCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="APPLE" />

        <CheckBox
            android:id="@+id/sonyCheckBox"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="SONY" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLinearLayoutCheckBoxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutCheckBoxes">

        <CheckBox
            android:id="@+id/lenovoCheckBox"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="LENOVO" />

        <CheckBox
            android:id="@+id/googlesCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GOOGLE" />

        <CheckBox
            android:id="@+id/logitechCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOGITECH" />
        <!---->
        <CheckBox
            android:id="@+id/razerCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RAZER" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/priceFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondLinearLayoutCheckBoxes"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/minPrice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/minimum_price"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/maxPrice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/maximum_price"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/filterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/filter"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/accessoriesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceFilter"
        android:layout_marginTop="8dp" />

</RelativeLayout>